--- a/game.html
+++ b/game.html
@@ -6,8 +6,43 @@
     <title>Kennis Race</title>
 </head>
 <body>
-    <main>
+    <main class="quiz">
+        <h1 class="quiz__question"></h1>
 
+        <section class="quiz__game">
+            <div class="progress" id="1"> 
+                <div class="progress__div" id="0"></div>
+                <div class="progress__div" id="1"></div>
+                <div class="progress__div" id="2"></div>
+                <div class="progress__div" id="3"></div>
+                <div class="progress__div" id="4"></div>
+                <div class="progress__div" id="5"></div>
+                <div class="progress__div" id="6"></div>
+                <div class="progress__div" id="7"></div>
+                <div class="progress__div" id="8"></div>
+                <div class="progress__div" id="9"></div>
+                <div class="progress__div" id="10"></div>
+            </div>
+    
+            <div class="progress" id="1"> 
+                <div class="progress__div" id="0"></div>
+                <div class="progress__div" id="1"></div>
+                <div class="progress__div" id="2"></div>
+                <div class="progress__div" id="3"></div>
+                <div class="progress__div" id="4"></div>
+                <div class="progress__div" id="5"></div>
+                <div class="progress__div" id="6"></div>
+                <div class="progress__div" id="7"></div>
+                <div class="progress__div" id="8"></div>
+                <div class="progress__div" id="9"></div>
+                <div class="progress__div" id="10"></div>
+            </div>
+        </section>
+
+        <section class="quiz__buttons">
+            <button class="button button--true">Juist</button>
+            <button class="button button--false">Juist</button>
+        </section>
     </main>
 </body>
 </html>
