--- a/game.html
+++ b/game.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kennis Race</title>
+
+    <link rel="stylesheet" href="./src/styles/main.css">
 </head>
 <body>
     <main class="quiz">
