--- a/game.html
+++ b/game.html
@@ -46,5 +46,7 @@
             <button class="button button--false">Juist</button>
         </section>
     </main>
+
+    <script type="module" src="./src/scripts/main.js"></script>
 </body>
 </html>
