updated game html

--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="quiz">
-        <h1 class="quiz__question"></h1>
+        <h1 class="quiz__question">Quizvraag</h1>
 
         <section class="quiz__game">
             <div class="progress" id="1"> 
@@ -43,7 +43,7 @@
 
         <section class="quiz__buttons">
             <button class="button button--true">Juist</button>
-            <button class="button button--false">Juist</button>
+            <button class="button button--false">Fout</button>
         </section>
     </main>
 
