added basic game

--- a/game.html
+++ b/game.html
@@ -10,6 +10,7 @@
 <body>
     <main class="quiz">
         <h1 class="quiz__question">Quizvraag</h1>
+        <p class="quiz__player-turn">Speler x aan de beurt</p>
 
         <section class="quiz__game">
             <div class="progress" id="1"> 
