--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
     <title>Kennis Race</title>
 
     <link rel="stylesheet" href="./src/styles/main.css">
 </head>
-<body>
-    <main>
-        <h1>Kennis Race</h1>
 
-        <div>
-            <a href="./game.html">Speel Spel</a>
-            <a href="./tutorial.html">Bekijk Tutorial</a>
+<body>
+    <main class="home">
+        <h1 class="home__title">Kennis Race</h1>
+
+        <div class="home__buttons">
+            <a href="./game.html" class="home__button">Speel Spel</a>
+            <a href="./tutorial.html" class="home__button">Bekijk Tutorial</a>
         </div>
     </main>
 </body>
+
 </html>
