background home animation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 </head>
 
 <body>
+
+    <div class='box'>
+        <div class='wave one'></div>
+        <div class='wave two'></div>
+        <div class='wave three'></div>
+      </div>
+      
     <main class="home">
         <h1 class="home__title">Kennis Race</h1>
 
