--- a/game.html
+++ b/game.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kennis Race</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./src/styles/main.css">
 </head>
+
 <body>
+
+    <div class='box'>
+        <div class='wave one'></div>
+        <div class='wave two'></div>
+        <div class='wave three'></div>
+    </div>
+
     <main class="quiz">
         <h1 class="quiz__question">Quizvraag</h1>
-        <p class="quiz__player-turn">Speler x aan de beurt</p>
+        <p class="quiz__player-turn">Speler x is aan de beurt</p>
 
         <section class="quiz__game">
-            <div class="progress" id="1"> 
+            <div class="progress" id="1">
                 <div class="progress__div" id="0"></div>
                 <div class="progress__div" id="1"></div>
                 <div class="progress__div" id="2"></div>
@@ -26,8 +38,8 @@
                 <div class="progress__div" id="9"></div>
                 <div class="progress__div" id="10"></div>
             </div>
-    
-            <div class="progress" id="1"> 
+
+            <div class="progress" id="1">
                 <div class="progress__div" id="0"></div>
                 <div class="progress__div" id="1"></div>
                 <div class="progress__div" id="2"></div>
@@ -50,4 +62,5 @@
 
     <script type="module" src="./src/scripts/main.js"></script>
 </body>
+
 </html>
