--- a/game.html
+++ b/game.html
@@ -20,13 +20,17 @@
         <div class='wave three'></div>
     </div>
 
+    <header>
+        <a href="./index.html">Home</a>
+    </header>
+
     <main class="quiz">
         <h1 class="quiz__question">Quizvraag</h1>
         <p class="quiz__player-turn">Speler x is aan de beurt</p>
 
         <section class="quiz__game">
             <div class="progress" id="1">
-                <div class="progress__div" id="0"></div>
+                <div class="progress__div current" id="0"></div>
                 <div class="progress__div" id="1"></div>
                 <div class="progress__div" id="2"></div>
                 <div class="progress__div" id="3"></div>
@@ -40,7 +44,7 @@
             </div>
 
             <div class="progress" id="1">
-                <div class="progress__div" id="0"></div>
+                <div class="progress__div current" id="0"></div>
                 <div class="progress__div" id="1"></div>
                 <div class="progress__div" id="2"></div>
                 <div class="progress__div" id="3"></div>
