quiz page styling

--- a/game.html
+++ b/game.html
@@ -18,16 +18,16 @@
         <div class='wave one'></div>
         <div class='wave two'></div>
         <div class='wave three'></div>
-    </div>
-
-    <header>
-        <a href="./index.html">Home</a>
+    </div>  
+    <header class="header">
+        <a class="header__link" href="./index.html"><img class="header__image" src="./src/assets/home.png" alt="Home"></a>
     </header>
 
     <main class="quiz">
         <h1 class="quiz__question">Quizvraag</h1>
         <p class="quiz__player-turn">Speler x is aan de beurt</p>
 
+        
         <section class="quiz__game">
             <div class="progress" id="1">
                 <div class="progress__div current" id="0"></div>
