--- a/game.html
+++ b/game.html
@@ -18,43 +18,46 @@
         <div class='wave one'></div>
         <div class='wave two'></div>
         <div class='wave three'></div>
-    </div>  
+    </div>
     <header class="header">
-        <a class="header__link" href="./index.html"><img class="header__image" src="./src/assets/home.png" alt="Home"></a>
+        <a class="header__link" href="./index.html"><img class="header__image" src="./src/assets/home.png"
+                alt="Home"></a>
     </header>
 
     <main class="quiz">
         <h1 class="quiz__question">Quizvraag</h1>
         <p class="quiz__player-turn">Speler x is aan de beurt</p>
 
-        
+
         <section class="quiz__game">
-            <div class="progress" id="1">
-                <div class="progress__div current" id="0"></div>
-                <div class="progress__div" id="1"></div>
-                <div class="progress__div" id="2"></div>
-                <div class="progress__div" id="3"></div>
-                <div class="progress__div" id="4"></div>
-                <div class="progress__div" id="5"></div>
-                <div class="progress__div" id="6"></div>
-                <div class="progress__div" id="7"></div>
-                <div class="progress__div" id="8"></div>
-                <div class="progress__div" id="9"></div>
-                <div class="progress__div" id="10"></div>
+            <div class="progress">
+                <div class="progress__line"></div>
+                <div class="progress__div current"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
             </div>
 
-            <div class="progress" id="1">
-                <div class="progress__div current" id="0"></div>
-                <div class="progress__div" id="1"></div>
-                <div class="progress__div" id="2"></div>
-                <div class="progress__div" id="3"></div>
-                <div class="progress__div" id="4"></div>
-                <div class="progress__div" id="5"></div>
-                <div class="progress__div" id="6"></div>
-                <div class="progress__div" id="7"></div>
-                <div class="progress__div" id="8"></div>
-                <div class="progress__div" id="9"></div>
-                <div class="progress__div" id="10"></div>
+            <div class="progress">
+                <div class="progress__line"></div>
+                <div class="progress__div current"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
+                <div class="progress__div"></div>
             </div>
         </section>
 
