added quiz answer

--- a/game.html
+++ b/game.html
@@ -28,6 +28,7 @@
         <h1 class="quiz__question">Quizvraag</h1>
         <p class="quiz__player-turn">Speler x is aan de beurt</p>
 
+        <p class="quiz__answer"></p>
 
         <section class="quiz__game">
             <div class="progress">
