--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <main class="home">
         <h1 class="home__title">Kennis Race</h1>
 
-        <div class="home__buttons">
-            <a href="./game.html" class="home__button">Speel Spel</a>
-            <a href="./tutorial.html" class="home__button">Bekijk Tutorial</a>
+        <div class="buttons">
+            <a href="./game.html" class="button">Speel Spel</a>
+            <a href="./tutorial.html" class="button">Bekijk Tutorial</a>
         </div>
     </main>
 </body>
