--- a/game.html
+++ b/game.html
@@ -13,58 +13,51 @@
 </head>
 
 <body>
-
-    <!-- <div class='box'>
-        <div class='wave one'></div>
-        <div class='wave two'></div>
-        <div class='wave three'></div>
-    </div> -->
     <header class="header">
-        <a class="header__link" href="./index.html"><img class="header__image" src="./src/assets/home.png"
-                alt="Home"></a>
+        <a class="header__link" href="./index.html">
+            <img class="header__icon" src="./src/assets/home.png" alt="Home">
+        </a>
     </header>
 
     <main class="quiz">
         <div class="quiz__content">
             <h1 class="quiz__question">Quizvraag</h1>
-            <p class="quiz__player-turn">Speler x is aan de beurt</p>
-    
+            <p class="quiz__turn">
+                <span class="quiz__player--1">Speler x</span> 
+                is aan de beurt
+            </p>
             <p class="quiz__answer">Juist</p>
         </div>
 
-        <section class="quiz__game">
+        <section class="quiz__progress">
             <div class="progress progress--player1">
-                <div class="progress__line"></div>
-                <div class="progress__div current"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
+                <div class="progress__step progress__step--current"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
             </div>
 
             <div class="progress progress--player2">
-                <div class="progress__line"></div>
-                <div class="progress__div current"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
-                <div class="progress__div"></div>
+                <div class="progress__step progress__step--current"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
+                <div class="progress__step"></div>
             </div>
         </section>
 
-        <section class="quiz__buttons">
+        <section class="buttons">
             <button class="button button--true">Juist</button>
             <button class="button button--false">Fout</button>
         </section>
@@ -72,5 +65,4 @@
 
     <script type="module" src="./src/scripts/main.js"></script>
 </body>
-
 </html>
