added start of tutorial

--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header header--game">
         <a class="header__link" href="./index.html">
             <img class="header__icon" src="./src/assets/home.png" alt="Home">
         </a>
