added screenshots to step 1 of tutorial

--- a/game.html
+++ b/game.html
@@ -63,6 +63,6 @@
         </section>
     </main>
 
-    <script type="module" src="./src/scripts/main.js"></script>
+    <script type="module" src="./src/scripts/app.js"></script>
 </body>
 </html>
