--- a/tutorial.html
+++ b/tutorial.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
 
-        <h1>Start To Code - Quiz Minigame</h1>
+        <h1>Start To Code - Kennis Race</h1>
 
         <a class="header__link" href="./index.html">
             <img class="header__icon" src="./src/assets/home.png" alt="Home">
@@ -20,7 +20,7 @@
     <main class="tutorial">
         <section class="tutorial__content">
             <p class="tutorial__text">In deze tutorial maken we een quiz-minigame waarbij je 1 tegen 1 kunt spelen. De eerste speler die 10 punten behaalt, wint de game.</p>
-            <img class="tutorial__image" class="" src="./src/assets/screenshot1.png">
+            <img class="tutorial__image" alt="Screenshot van Kennis Race" src="./src/assets/screenshot1.png">
             <p class="tutorial__text">Hiervoor gebruiken we 3 codetalen</p>
             <ul class="tutorial__list">
                 <li class="tutorial__item">HTML</li>
@@ -28,33 +28,39 @@
                 <li class="tutorial__item">JavaScript</li>
             </ul>
         </section>
-        <section>
-            <section>
-                <h2>Stap 1: Mappenstructuur</h2>
-                <p>Download en installeer de code editor <a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code</a></p>
-                <ul>
-                    <li>
-                        1.1 Maak een nieuwe folder met de naam quiz-minigame.
+        <section class="tutorial__content">
+            <section class="step">
+                <h2 class="step__title">Stap 1: Mappenstructuur</h2>
+                <p class="step__text">Download en installeer de code editor <a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code</a></p>
+                <ul class="step__list">
+                    <li class="step__item">
+                        1.1 Maak een nieuwe folder met de naam kennis-race.
+                        <img class="tutorial__image" alt="Maak een nieuwe folder" src="./src/assets/screenshot2.png">
+
                     </li>
                     <li>
                         1.2 Open Visual Studio Code en open de nieuwe folder.
+                        <img class="tutorial__image" alt="Open de nieuwe folder" src="./src/assets/screenshot3.png">
                     </li>
                     <li>
                         1.3 De map- en bestandsstructuur ziet er zo uit:
+                        <img class="tutorial__image" alt="Maak map- en bestandsstructuur" src="./src/assets/screenshot4.png">
                     </li>
                     <li>
                         1.4 Installeer de Live Server extensie in Visual Studio Code.
+                        <img class="tutorial__image" alt="Installeer live server extensie" src="./src/assets/screenshot5.png">
                     </li>
                     <li>
-                        1.5 Start de Live Server door onderaan op Go Live te klikken. Dit opent een nieuw browservenster met je project.
+                        1.5 Start de Live Server door onderaan op <span>Go Live</span> te klikken. Dit opent een nieuw browservenster met je project.
+                        <img class="tutorial__image" alt="Open de live server" src="./src/assets/screenshot6.png">
                     </li>
                 </ul>
             </section>
-            <section>
+            <section class="tutorial__step">
                 <h2>Stap 2: HTML</h2>
                 <ul>
                     <li>
-                        2.1 Kopieer onderstaande code in het index.html bestand. Dit is de basis stuctuur van een webpagina.
+                        2.1 Kopieer onderstaande code in het <span class="tutorial__highlight">index.html</span> bestand. Dit is de basis stuctuur van een webpagina.
                         <pre>
                             <code>
 &lt;<span class="tag">!DOCTYPE </span><span class="attr">html</span>&gt;
