added html steps of tutorial

--- a/game.html
+++ b/game.html
@@ -20,14 +20,15 @@
     </header>
 
     <main class="quiz">
-        <div class="quiz__content">
+
+        <section class="quiz__content">
             <h1 class="quiz__question">Quizvraag</h1>
             <p class="quiz__turn">
                 <span class="quiz__player--1">Speler x</span> 
                 is aan de beurt
             </p>
             <p class="quiz__answer">Juist</p>
-        </div>
+        </section>
 
         <section class="quiz__progress">
             <div class="progress progress--player1">
