--- a/tutorial.html
+++ b/tutorial.html
@@ -38,19 +38,19 @@
                         <img class="tutorial__image" alt="Maak een nieuwe folder" src="./src/assets/screenshot2.png">
 
                     </li>
-                    <li>
+                    <li class="step__item">
                         1.2 Open Visual Studio Code en open de nieuwe folder.
                         <img class="tutorial__image" alt="Open de nieuwe folder" src="./src/assets/screenshot3.png">
                     </li>
-                    <li>
+                    <li class="step__item">
                         1.3 De map- en bestandsstructuur ziet er zo uit:
                         <img class="tutorial__image" alt="Maak map- en bestandsstructuur" src="./src/assets/screenshot4.png">
                     </li>
-                    <li>
+                    <li class="step__item">
                         1.4 Installeer de Live Server extensie in Visual Studio Code.
                         <img class="tutorial__image" alt="Installeer live server extensie" src="./src/assets/screenshot5.png">
                     </li>
-                    <li>
+                    <li class="step__item">
                         1.5 Start de Live Server door onderaan op <span>Go Live</span> te klikken. Dit opent een nieuw browservenster met je project.
                         <img class="tutorial__image" alt="Open de live server" src="./src/assets/screenshot6.png">
                     </li>
@@ -60,7 +60,7 @@
                 <h2>Stap 2: HTML</h2>
                 <p>HTML vormt de basis van je website. Gebruikersinteractie volgt later.</p>
                 <ul class="step__list">
-                    <li>
+                    <li class="step__item">
                         2.1 Kopieer onderstaande code in het <span class="tutorial__highlight">index.html</span> bestand. Dit is de basis stuctuur van een webpagina.
                         <pre>
 <code>&lt;<span class="tag">!DOCTYPE </span><span class="attr">html</span>&gt;
@@ -69,7 +69,7 @@
 &lt;<span class="tag">head</span>&gt;
     &lt;<span class="tag">meta</span> <span class="attr">charset</span>=<span class="string">&quot;UTF-8&quot;</span>&gt;
     &lt;<span class="tag">meta</span> <span class="attr">name</span>=<span class="string">&quot;viewport&quot;</span> <span class="attr">content</span>=<span class="string">&quot;width=device-width, initial-scale=1.0&quot;</span>&gt;
-    &lt;<span class="tag">title</span>&gt;<span class="text">Kennis Race</span>&lt;/<span class="tag">title</span>&gt;
+    &lt;<span class="tag">title</span>&gt;Kennis Race&lt;/<span class="tag">title</span>&gt;
     &lt;<span class="tag">link</span> <span class="attr">rel</span>=<span class="string">&quot;preconnect&quot;</span> <span class="attr">href</span>=<span class="string">&quot;https://fonts.googleapis.com&quot;</span>&gt;
     &lt;<span class="tag">link</span> <span class="attr">rel</span>=<span class="string">&quot;preconnect&quot;</span> <span class="attr">href</span>=<span class="string">&quot;https://fonts.gstatic.com&quot;</span> <span class="attr">crossorigin</span>&gt;
     &lt;<span class="tag">link</span> <span class="attr">href</span>=<span class="string">&quot;https://fonts.googleapis.com/css2?family=Major+Mono+Display&amp;display=swap&quot;</span> <span class="attr">rel</span>=<span class="string">&quot;stylesheet&quot;</span>&gt;
@@ -83,42 +83,38 @@
     <span class="comment">&lt;!-- Voeg hier code toe --&gt;</span>
 
     &lt;/<span class="tag">main</span>&gt;
-    &lt;<span class="tag">script</span> <span class="attr">type</span>=<span class="string">&quot;module&quot;</span> <span class="attr">src</span>=<span class="string">&quot;./src/scripts/main.js&quot;</span>&gt;&lt;/<span class="tag">script</span>&gt;
+    &lt;<span class="tag">script</span> <span class="attr">type</span>=<span class="string">&quot;module&quot;</span> <span class="attr">src</span>=<span class="string">&quot;./scripts/app.js&quot;</span>&gt;&lt;/<span class="tag">script</span>&gt;
 &lt;/<span class="tag">body</span>&gt;
 &lt;/<span class="tag">html</span>&gt;
-</code>
-                          </pre>
+</code></pre>
                     </li>
                     <br>
                         2.2 Voeg nu deze code toe aan je index.html, tussen de <span class="tutorial__highlight">&lt;main&gt;</span> en <span class="tutorial__highlight">&lt;/main&gt;</span> tags.
                         
                         <pre>
 <code>&lt;<span class="tag">section</span> <span class="attr">class</span>=<span class="string">&quot;quiz__content&quot;</span>&gt;
-    &lt;<span class="tag">h1</span> <span class="attr">class</span>=<span class="string">&quot;quiz__question&quot;</span>&gt;<span class="text">Quizvraag</span>&lt;/<span class="tag">h1</span>&gt;
+    &lt;<span class="tag">h1</span> <span class="attr">class</span>=<span class="string">&quot;quiz__question&quot;</span>&gt;Quizvraag&lt;/<span class="tag">h1</span>&gt;
     &lt;<span class="tag">p</span> <span class="attr">class</span>=<span class="string">&quot;quiz__turn&quot;</span>&gt;
-        &lt;<span class="tag">span</span> <span class="attr">class</span>=<span class="string">&quot;quiz__player--1&quot;</span>&gt;<span class="text">Speler x</span>&lt;/<span class="tag">span</span>&gt; 
-        <span class="text">is aan de beurt</span>
+        &lt;<span class="tag">span</span> <span class="attr">class</span>=<span class="string">&quot;quiz__player--1&quot;</span>&gt;Speler x&lt;/<span class="tag">span</span>&gt; 
+        is aan de beurt
     &lt;/<span class="tag">p</span>&gt;
     &lt;<span class="tag">p</span> <span class="attr">class</span>=<span class="string">&quot;quiz__answer&quot;</span>&gt;&lt;/<span class="tag">p</span>&gt;
 &lt;/<span class="tag">section</span>&gt;
-</code>
-                          </pre>
+</code></pre>
                     </li>
-                    <li>
+                    <li class="step__item">
                         2.3 Voeg onder bovenstaande code ook deze code toe.
                         <pre>
-<code>
-&lt;<span class="tag">section</span> <span class="attr">class</span>=<span class="string">"buttons"</span>&gt;
+<code>&lt;<span class="tag">section</span> <span class="attr">class</span>=<span class="string">"buttons"</span>&gt;
     &lt;<span class="tag">button</span> <span class="attr">class</span>=<span class="string">"button button--true"</span>&gt;Juist&lt;/<span class="tag">button</span>&gt;
     &lt;<span class="tag">button</span> <span class="attr">class</span>=<span class="string">"button button--false"</span>&gt;Fout&lt;/<span class="tag">button</span>&gt;
 &lt;/<span class="tag">section</span>&gt;
-</code>
-                        </pre>
+</code></pre>
                         Nu zal je webpagina er zo uitzien, een titel met subtitel en twee knoppen.
                         <img class="tutorial__image" alt="Start van webpagina" src="./src/assets/screenshot7.png">
                     </li>
-                    <li>
-                        2.4 Tussen de section met klasses <span class="tutorial__highlight">"quiz__content"</span> en <span class="tutorial__highlight">"quiz__buttons"</span> voeg je volgende code toe.<br>
+                    <li class="step__item">
+                        2.4 Tussen de sections <span class="tutorial__highlight">"quiz__content"</span> en <span class="tutorial__highlight">"quiz__buttons"</span> voeg je volgende code toe.<br>
                         Deze code zal nog niet visueels toevoegen, maar later worden dit de voortgangsbalken van de spelers.
                         <pre>
 <code>&lt;<span class="tag">section</span> <span class="attr">class</span>=<span class="string">&quot;quiz__progress&quot;</span>&gt;
@@ -147,8 +143,7 @@
         &lt;<span class="tag">div</span> <span class="attr">class</span>=<span class="string">&quot;progress__step&quot;</span>&gt;&lt;/<span class="tag">div</span>&gt;
         &lt;<span class="tag">div</span> <span class="attr">class</span>=<span class="string">&quot;progress__step&quot;</span>&gt;&lt;/<span class="tag">div</span>&gt;
     &lt;/<span class="tag">div</span>&gt;
-&lt;/<span class="tag">section</span>&gt;</code>
-                          </pre>
+&lt;/<span class="tag">section</span>&gt;</code></pre>
                     </li>
 
                 </ul>
@@ -157,9 +152,8 @@
                 <h2>Stap 3: CSS</h2>
                 <p>CSS zorgt voor de vormgeving en stijl van je website.</p>
                 <ul class="step__list">
-                    <li>
-                        3.1 Plak deze code in je <span class="tutorial__highlight">main.css</span> bestand. Dit geeft een mooie layout aan het spel.
-                        Alle kleuren kun je zelf kiezen en aanpassen, hoe je zelf de game eruit wil laten zien.
+                    <li class="step__item">
+                        3.1 Plak deze code in je <span class="tutorial__highlight">main.css</span> bestand. Dit geeft een mooie layout aan het spel.<br>
                         <pre>
 <code><span class="selector">body {</span>
     <span class="attr">font-family</span>: <span class="string">monospace</span>;
@@ -286,13 +280,111 @@
     <span class="attr">color</span>: #fff;
     <span class="attr">transition</span>: <span class="value">background-color 0.3s ease, color 0.3s ease</span>;
 <span class="selector">}</span>
-</code>
-                        </pre>
+</code></pre>
+                        Zo zal je pagina er uitzien. Alle kleuren kun je zelf kiezen en aanpassen, hoe je zelf het spel eruit wil laten zien.
+                        <img class="tutorial__image" alt="Gestijlde webpagina" src="./src/assets/screenshot8.png">
+
                     </li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                </ul>
+            </section>
+            <section class="step">
+                <h2 class="step__title">Stap 4: JavaScript</h2>
+                <p>JavaScript geeft functionaliteit aan het spel.</p>
+                <ul class="step__list">
+                    <li class="step__item">
+                        4.1 Het eerste wat we gaan doen is zorgen dat we quizvragen hebben. Iedere quizvraag bestaat uit een <span class="tutorial__highlight">question</span> en een <span class="tutorial__highlight">answer</span>. Een answer kan true of false zijn.<br>
+                        Download <a href="./src/data/questions.js" download>questions.js</a>, een bestand met 50 quizvragen en plaats deze in de <span class="tutorial__highlight">data</span> folder.
+                        <img class="tutorial__image" alt="questions.js in data folder" src="./src/assets/screenshot9.png">
+                    </li>
+                    <li class="step__item">
+                        4.2 In <span class="tutorial__highlight">app.js</span> schrijf je helemaal bovenaan je bestand deze code.<br>
+                        We importeren de array van vragen en initialiseren enkele variabelen die we later gaan gebruiken.
+                        <pre>
+<code><span class="symbol">import </span><span class="attr">questionArray </span><span class="symbol">from </span><span class="string">"../data/questions.js"</span>;
+ 
+<span class="tag">let</span> <span class="attr">player1Score</span> = <span class="value">0</span>, <span class="attr">player2Score</span> = <span class="value">0</span>;
+<span class="tag">let</span> <span class="attr">currentPlayer</span> = <span class="value">1</span>;
+<span class="tag">let</span> <span class="attr">currentAnswer</span> = <span class="tag">null</span>;
+<span class="tag">let</span> <span class="attr">isWaiting</span> = <span class="tag">false</span>;
+
+<span class="tag">const</span> <span class="var">$questionDisplay</span> = <span class="attr">document</span>.<span class="selector">querySelector</span>(<span class="string">".quiz__question"</span>);
+<span class="tag">const</span> <span class="var">$playerTurnDisplay</span> = <span class="attr">document</span>.<span class="selector">querySelector</span>(<span class="string">".quiz__turn"</span>);
+<span class="tag">const</span> <span class="var">$answerDisplay</span> = <span class="attr">document</span>.<span class="selector">querySelector</span>(<span class="string">".quiz__answer"</span>);
+<span class="tag">const</span> <span class="var">$trueButton</span> = <span class="attr">document</span>.<span class="selector">querySelector</span>(<span class="string">".button--true"</span>);
+<span class="tag">const</span> <span class="var">$falseButton</span> = <span class="attr">document</span>.<span class="selector">querySelector</span>(<span class="string">".button--false"</span>);
+</code></pre>
+                    </li>
+                    <li class="step__item">
+                        4.3 Voeg nu onder de initialisatie deze lege functies toe.
+<pre><code>function startGame() {
+    initButtons();
+    updatePoints();
+    playerTurn();
+}
+
+function playerTurn() {
+
+}
+
+function initButtons() {
+
+}
+
+function updatePoints() {
+
+}
+
+startGame();
+</code></pre>
+                    </li>
+                    <li class="step__item">
+                        4.4 Nu gaan we een random vraag tonen op de website.<br>
+                        Schrijf in de functie <span class="tutorial__highlight">playerTurn()</span> onderstaande code.<br>
+                        Hierin halen we een random vraag uit de array, en tonen we deze in <span class="tutorial__highlight">$questionDisplay</span>.
+                        <pre>
+<code><span class="tag">function </span><span class="selector">playerTurn() </span>{
+    <span class="tag">const </span><span class="var">randomQuestion</span> = <span class="var">questionArray</span>[<span class="attr">Math</span>.<span class="selector">floor</span>(<span class="attr">Math</span>.<span class="selector">random</span>() * <span class="var">questionArray</span>.<span class="attr">length</span>)];
+    </span><span class="var">$questionDisplay</span>.<span class="attr">innerHTML</span> = <span class="var">randomQuestion</span>.<span class="attr">question</span>;
+}
+</code></pre>
+                        Roep nu als test deze funtie op door onderaan je code <span class="tutorial__highlight">playerTurn();</span> te schrijven.
+                        Als je nu je website herlaad, wordt er elke keer een random quizvraag getoont.
+                    </li>
+                    <li class="step__item">
+                        4.5 Nu gaan we tonen welke speler aan de beurt is. Dit doen we aan de hand van de variabele <span class="tutorial__highlight">currentPlayer</span>.<br>
+                        Voeg in de functie <span class="tutorial__highlight">playerTurn()</span> deze lijn code toe.
+<pre><code>$playerTurnDisplay.innerHTML = `&lt;span class="quiz__player--${currentPlayer}"&gt;Speler ${currentPlayer}&lt;/span&gt; is aan de beurt`;
+</code></pre>
+                        Hiermee tonen we de variabele <span class="tutorial__highlight">currentPlayer</span> op de website.
+                    </li>
+                    <li class="step__item">
+                        4.6 Vervolgens willen we onze knoppen laten werken. Schrijf deze code in de functie <span class="tutorial__highlight">initButtons()</span><br>
+                        De <span class="tutorial__highlight">isWaiting</span> variabele nodig om spammen tegen te houden. Enkel wanneer deze true is, kunnen we drukken op de knop
+<pre><code>function initButtons() {
+    $trueButton.addEventListener("click", () => {
+        if (!isWaiting) {
+            alert('True');
+        }
+    });
+
+    $falseButton.addEventListener("click", () => {
+        if (!isWaiting) {
+            alert('False');
+        }
+    });
+}
+</code></pre>
+                        Voor nu schrijven we een alert als we op een knop drukken. Later passen we dit aan.
+                        <img class="tutorial__image" alt="Alert op de game page" src="./src/assets/screenshot10.png">
+                    </li>
+                    <li class="step__item">
+                        4.7 Nu willen we de punten van de spelers kunnen zien. In index.html hebben we per speler 10 divs die elk voor een punt staan.<br>
+                        
+                    </li>
+                    <li class="step__item"></li>
+                    <li class="step__item"></li>
+                    <li class="step__item"></li>
+                    <li class="step__item"></li>
                 </ul>
             </section>
         </section>
