refactor header layout and styles for improved alignment

--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header header--game">
-        <a class="header__link" href="./index.html">
+        <a class="header__link header__link--right" href="./index.html">
             <img class="header__icon" src="./src/assets/home.png" alt="Home">
         </a>
     </header>
