--- a/tutorial.html
+++ b/tutorial.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <header class="header">
+        <div class="header__content">
+            <h1 class="header__title">Start To Code - Kennis Race</h1>
+        </div>
 
-        <h1>Start To Code - Kennis Race</h1>
-
-        <a class="header__link" href="./index.html">
+        <a class="header__link header__link--right" href="./index.html">
             <img class="header__icon" src="./src/assets/home.png" alt="Home">
         </a>
     </header>
