styling first step of tututorial

--- a/tutorial.html
+++ b/tutorial.html
@@ -42,8 +42,8 @@
         </section>
         <section class="tutorial__content">
             <section class="step">
-                <h2 class="step__title">Stap 1: Mappenstructuur</h2>
-                <p class="step__text">Download en installeer de code editor <a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code</a></p>
+                 <h2 class="step__title">Stap 1: Mappenstructuur</h2>
+                <p class="step__text">Ga naar de officiële website van <a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code.</a> Op de startpagina zie je meteen een knop om de versie te downloaden die geschikt is voor jouw besturingssysteem (Windows, macOS of Linux). Klik op de knop om het installatiebestand te downloaden. Zodra je dit hebt gedaan kunnen we aan de slag met programmeren!</p>
                 <ul class="step__list">
                     <li class="step__item">
                         1.1 Maak een nieuwe folder met de naam kennis-race.
@@ -69,8 +69,8 @@
                 </ul>
             </section>
             <section class="step">
-                <h2>Stap 2: HTML</h2>
-                <p>HTML vormt de basis van je website. Gebruikersinteractie volgt later.</p>
+                <h2 class="step__title">Stap 2: HTML</h2>
+                <p class="step__text">HTML vormt de basis van je website. Gebruikersinteractie volgt later.</p>
                 <ul class="step__list">
                     <li class="step__item">
                         2.1 Kopieer onderstaande code in het <span class="tutorial__highlight">index.html</span> bestand. Dit is de basis stuctuur van een webpagina.
@@ -161,8 +161,8 @@
                 </ul>
             </section>
             <section class="step">
-                <h2>Stap 3: CSS</h2>
-                <p>CSS zorgt voor de vormgeving en stijl van je website.</p>
+                <h2 class="step__title">Stap 3: CSS</h2>
+                <p class="step__text">CSS zorgt voor de vormgeving en stijl van je website.</p>
                 <ul class="step__list">
                     <li class="step__item">
                         3.1 Plak deze code in je <span class="tutorial__highlight">main.css</span> bestand. Dit geeft een mooie layout aan het spel.<br>
@@ -301,7 +301,7 @@
             </section>
             <section class="step">
                 <h2 class="step__title">Stap 4: JavaScript</h2>
-                <p>JavaScript geeft functionaliteit aan het spel.</p>
+                <p class="step__text">JavaScript geeft functionaliteit aan het spel.</p>
                 <ul class="step__list">
                     <li class="step__item">
                         4.1 Het eerste wat we gaan doen is zorgen dat we quizvragen hebben. Iedere quizvraag bestaat uit een <span class="tutorial__highlight">question</span> en een <span class="tutorial__highlight">answer</span>. Een answer kan true of false zijn.<br>
