refactor tutorial layout and styles for improved readability and structure

--- a/tutorial.html
+++ b/tutorial.html
@@ -44,33 +44,36 @@
             <section class="step">
                  <h2 class="step__title">Stap 1: Mappenstructuur</h2>
                 <p class="step__text">Ga naar de officiële website van <a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code.</a> Op de startpagina zie je meteen een knop om de versie te downloaden die geschikt is voor jouw besturingssysteem (Windows, macOS of Linux). Klik op de knop om het installatiebestand te downloaden. Zodra je dit hebt gedaan kunnen we aan de slag met programmeren!</p>
-                <ul class="step__list">
-                    <li class="step__item">
-                        1.1 Maak een nieuwe folder met de naam kennis-race.
+                <div class="step__content">
+                    <h3 class="step__subtitle">1.1 Maak een nieuwe folder</h3>
+                    <p class="step__item">
+                        Maak een nieuwe folder met de naam kennis-race.
                         <img class="tutorial__image" alt="Maak een nieuwe folder" src="./src/assets/screenshot2.png">
-
-                    </li>
-                    <li class="step__item">
-                        1.2 Open Visual Studio Code en open de nieuwe folder.
+                    </p>
+                    <h3 class="step__subtitle">1.2 Open VS Code </h3>
+                    <p class="step__item">
+                        Open Visual Studio Code en open de nieuwe folder.
                         <img class="tutorial__image" alt="Open de nieuwe folder" src="./src/assets/screenshot3.png">
-                    </li>
-                    <li class="step__item">
-                        1.3 De map- en bestandsstructuur ziet er zo uit:
+                    </p>
+                    <h3 class="step__subtitle">1.3 folderstructuur</h3>
+                    <p class="step__item">
+                        De map- en bestandsstructuur ziet er zo uit:
                         <img class="tutorial__image" alt="Maak map- en bestandsstructuur" src="./src/assets/screenshot4.png">
-                    </li>
-                    <li class="step__item">
-                        1.4 Installeer de Live Server extensie in Visual Studio Code.
+                    </p>
+                    <h3 class="step__subtitle">1.4 Installatie Live server</h3>
+                    <p class="step__item">
+                        Installeer de Live Server extensie in Visual Studio Code.
                         <img class="tutorial__image" alt="Installeer live server extensie" src="./src/assets/screenshot5.png">
-                    </li>
-                    <li class="step__item">
+                    </p>
+                    <p class="step__item">
                         1.5 Start de Live Server door onderaan op <span>Go Live</span> te klikken. Dit opent een nieuw browservenster met je project.
                         <img class="tutorial__image" alt="Open de live server" src="./src/assets/screenshot6.png">
-                    </li>
-                </ul>
+                    </p>
+                </div>
             </section>
             <section class="step">
                 <h2 class="step__title">Stap 2: HTML</h2>
-                <p class="step__text">HTML vormt de basis van je website. Gebruikersinteractie volgt later.</p>
+                <p class="step__text">HTML vormt de basis van je website. Het bepaalt de structuur en inhoud, zoals teksten, afbeeldingen en links. Pas daarna voeg je met CSS en JavaScript opmaak en gebruikersinteractie toe, zoals knoppen, formulieren en nog veel meer!</p>
                 <ul class="step__list">
                     <li class="step__item">
                         2.1 Kopieer onderstaande code in het <span class="tutorial__highlight">index.html</span> bestand. Dit is de basis stuctuur van een webpagina.
@@ -101,6 +104,7 @@
 </code></pre>
                     </li>
                     <br>
+                    <li class="step__item">
                         2.2 Voeg nu deze code toe aan je index.html, tussen de <span class="tutorial__highlight">&lt;main&gt;</span> en <span class="tutorial__highlight">&lt;/main&gt;</span> tags.
                         
                         <pre>
